# zerotrust-ai

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
sample_data/: access_logs.json  flow_data.json  identities.json  policies.yaml
src/zerotrust_ai/: __init__.py  cli.py
src/zerotrust_ai/access/: __init__.py  context.py  engine.py  verification.py
src/zerotrust_ai/api/: __init__.py  app.py
src/zerotrust_ai/behavioral/: __init__.py  anomaly.py  baseline.py  patterns.py  session.py
src/zerotrust_ai/dashboard/: __init__.py  app.py
src/zerotrust_ai/dashboard/static/: style.css
src/zerotrust_ai/dashboard/templates/: dashboard.html
src/zerotrust_ai/identity/: __init__.py  models.py  registry.py
src/zerotrust_ai/lateral/: __init__.py  detector.py  graph.py
src/zerotrust_ai/microseg/: __init__.py  flows.py  recommender.py  segments.py
src/zerotrust_ai/policy/: __init__.py  engine.py  models.py
src/zerotrust_ai/risk/: __init__.py  engine.py
tests/: conftest.py  test_access.py  test_api.py  test_behavioral.py  test_cli.py  test_identity.py  test_lateral.py  test_microseg.py  test_policy.py  test_risk.py
